# armando_controller

./: CMakeLists.txt  README.md  package.xml
config/: poses.yaml
include/: pose_loader.hpp
launch/: armando_ik.launch.py
src/: armando_controller_node.cpp  armando_ik_node.cpp  armando_pick_and_place.cpp  pose_loader.cpp
